@@ -310,6 +310,36 @@ or online on <ulink url="http://doc.opensuse.org"/>.
   </section>
 
   <section>
+   <!-- bnc#900813 -->
+   <title>Modem Authorization After Suspend</title>
+   <para>
+    The new openSUSE 13.2 is a bit more strict in security that 13.1,
+    it you are connected via a UMTS or 3G modem and you suspend the
+    machine, the system will ask you for the root password before
+    reconnecting.
+   </para>
+      
+   <para>
+    You can change this behavior changing a line in
+    /etc/polkit-default-privs.standard:
+   </para>
+
+   <screen>
+    # ModemManager
+    org.freedesktop.ModemManager.Device.Control    auth_admin:auth_admin:yes
+   </screen>
+
+   <para>
+    with
+   </para>
+
+   <screen>
+    # ModemManager
+    org.freedesktop.ModemManager.Device.Control    auth_admin_keep
+   </screen>
+  </section>
+
+  <section>
    <!-- bnc#902947 -->
    <title>openSUSE pre-13.2 cifstab Migration</title>
 
