@@ -1,5 +1,6 @@
 - New entries: Second Static Mouse Pointer (bnc#899610); Live CD
   Installer and Keyboard Settings (bnc#903242).
+- New entry: Modem Authorization After Suspend (bnc#900813).
 
 13.2.20141030:
 - Update translations.
